calculadora com interface gráfica adicionada