@@ -9,7 +9,7 @@ Uma calculadora simples desenvolvida em Java que realiza operaçõs matemáticas
 - Multiplicação (*)
 - Divisão (/)
 
-## ⚙️ Como Executar:
+## ⚙️ Como Executar a versão pelo console:
 
 1. Clone este repositório:
 
@@ -32,8 +32,33 @@ javac Calculadora.java
 java Calculadora
 ```
 
-## 🖥️ Tecnologias Utilizadas:
-Java 21
+
+## ⚙️ Como Executar a versão pelo HUD:
+
+1. Clone este repositório:
+
+```bash 
+git clone https://github.com/DanyelC05/calculadora-java.git 
+```
+
+2. Navegue até o diretório do projeto:
+```bash 
+cd calculadora-java
+```
+
+3. Compile o programa:
+```bash 
+javac --module-path "C:\\caminho\\para\\a\\pasta\\javafx-sdk-22.0.2\\lib" --add-modules javafx.controls calculadora/calc/*.java
+```
+
+4. Execute o programa:
+```bash 
+java --module-path "C:\\caminho\\para\\a\\pasta\\javafx-sdk-22.0.2\\lib" --add-modules javafx.controls calculadora.calc.CalculadoraFX
+```
+
+## 🖥️ Requisitos:
+Java JDK 21
+JavaFX SDK 22
 
 ## 🤝 Contribuições
 Danyel
